# ofiq-syngen

./: .gitignore  ANALYSIS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE_NOTICES.md  MIGRATION.md  OFIQ_UPSTREAM.md  README.md  USAGE.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  standards.yml
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
benchmarks/: COMPETITORS.md  README.md  bench_throughput.py  run_grid.py
benchmarks/adapters/: _template.py  opencv_baseline.py
benchmarks/results/: throughput.csv
docs/: ANALYSIS.md  CITING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAILURE_MODES.md  ISO_COVERAGE.md  OFIQ_UPSTREAM.md  PIPELINE_SPEC.md  USAGE.md  index.md
docs/gallery/: BackgroundUniformity.md  CompressionArtifacts.md  DynamicRange.md  ExpressionNeutrality.md  EyesOpen.md  EyesVisible.md  FaceOcclusionPrevention.md  HeadPosePitch.md  HeadPoseRoll.md  HeadPoseYaw.md  HeadSize.md  INDEX.md  IlluminationUniformity.md  InterEyeDistance.md  LeftwardCropOfTheFaceImage.md  LuminanceMean.md  LuminanceVariance.md  MarginAboveOfTheFaceImage.md  MarginBelowOfTheFaceImage.md  MouthClosed.md  MouthOcclusionPrevention.md  NaturalColour.md  NoHeadCoverings.md  OverExposurePrevention.md  README.md  RadialDistortion.md  RightwardCropOfTheFaceImage.md  Sharpness.md  SingleFacePresent.md  UnderExposurePrevention.md
docs/standards/: MAPPING.csv  MAPPING.md  PROVENANCE.md  SOURCES.md
docs/theory/: COMPONENT_STATUS.md  index.md
examples/: README_realtime.md  basic_usage.py  quickstart.py  realtime_capture.py
notebooks/: cookbook.ipynb
paper/: paper.bib  paper.md
scripts/: audit_docstrings.py  icao_perturbation_pdf.py  regenerate_gallery.py  regenerate_parity_vectors.py  run_crosstalk.py  run_monotonicity.py
src/ofiq_syngen/: __init__.py  assets.py  cli.py  components.py  expression_diffusion.py  face_3dmm.py  face_3dmm_dense.py  face_3dmm_nvdiff.py  face_context.py  gpu_ofiq_scorer.py  landmark_utils.py  models.py  occluders.py  pipeline.py  standards.py
src/ofiq_syngen/generative/: __init__.py  expression.py  head_covering.py  single_face.py
src/ofiq_syngen/three_d/: __init__.py  pipeline.py  registry.py  standards.py
src/ofiq_syngen/three_d/lift/: __init__.py  _chumpy_compat.py  base.py  deca.py
src/ofiq_syngen/three_d/perturb/: __init__.py  appearance.py  geometry.py  occluders.py  post_2d.py
src/ofiq_syngen/three_d/render/: __init__.py  base.py  deca_renderer.py  pyrender_renderer.py
src/ofiq_syngen/three_d/scene/: __init__.py  analysis.py  state.py
src/ofiq_syngen/three_d/scripts/: check_assets.py
tests/: test_cli_presets.py  test_components.py  test_components_per_component.py  test_degradation_direction.py  test_landmark_utils.py  test_ofiq_parity.py  test_standards_mapping.py
tests/fixtures/ofiq_parity/: REGENERATE.md  manifest.json
