[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ofiq-syngen"
version = "0.2.0"
description = "ISO/IEC 29794-5 component-aligned synthetic face image quality degradation pipeline"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Aaron Storey", email = "aaron@astoreyai.com" },
]
keywords = [
    "biometrics",
    "face-quality",
    "OFIQ",
    "ISO-29794-5",
    "degradation",
    "synthetic-data",
    "face-recognition",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "opencv-python-headless>=4.5",
    "numpy>=1.21",
    "onnxruntime>=1.14",
    "scipy>=1.7",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.14"]
pandas = ["pandas>=1.3"]
generative = [
    "insightface>=0.7",
    "diffusers>=0.25",
    "torch>=2.0",
]
dev = [
    "pytest>=7.0",
    "pandas>=1.3",
]

[project.urls]
Homepage = "https://github.com/astoreyai/ofiq-syngen"
Documentation = "https://github.com/astoreyai/ofiq-syngen#readme"
Repository = "https://github.com/astoreyai/ofiq-syngen"
Issues = "https://github.com/astoreyai/ofiq-syngen/issues"

[project.scripts]
ofiq-syngen = "ofiq_syngen.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ofiq_syngen"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
# E702: compound statements on one line (intentional in pose-math one-liners)
# E741: ambiguous variable name (l/r/t/b is universally read as left/right/top/bottom)
ignore = ["E702", "E741"]

[tool.ruff.lint.per-file-ignores]
# pandas typed as a forward-string annotation in score_directory; pandas
# is an optional runtime dependency, not an import-time requirement
"src/ofiq_syngen/gpu_ofiq_scorer.py" = ["F821"]
# Generative imports placed mid-module so the registration block (which
# wraps them in _register calls) groups together by OFIQ section rather
# than collecting all imports at the top
"src/ofiq_syngen/components.py" = ["E402"]
